Fixed a bug where LockedCropArea would be wider than the column width causing a horizontal scroll bar.

--- a/greve.io/greve.io/ClientApp/src/components/ImageSheet.css
+++ b/greve.io/greve.io/ClientApp/src/components/ImageSheet.css
@@ -43,10 +43,9 @@ h1 {
     justify-content: center;
     font-size: 3em;
     position: absolute;
-    width: 100%;
+    width: calc(100% - 15px);
     height: 100%;
     bottom: 0;
-    /*border: 1px solid black;*/
     background: rgba(255, 255, 255, 0.4);
 }
 
